<resources>
    <string name="app_name">Pizza Calculator</string>
    <string name="user_Prompt">How many guest will attend?</string>
    <string name="user_Prompt2">enter amount here:</string>
    <string name="details">Guest amount:</string>
    <string name="hungertype">hunger Level:</string>
    <string name="calculate">Calculate Pizza:</string>
    <string name="Amount_of_pizza">pizza needed:</string>
    <string name="error">Please choose hunger level</string>
    <string name="error2">Please Please enter the amount of Guests</string>
    <string name="User_question"> How hungry are your guest?</string>
    <string name="enjoy"> Enjoy Your Pizza!</string>
    <string name="light">light</string>
    <string name="Medium">Medium</string>
    <string name="Ravenous">Ravenous</string>
    <string name="pizza">Pizza(s)</string>
<string-array name="hungerLevel">
    <item>How hungry are your guest?</item>
    <item>light</item>
    <item>Medium</item>
    <item>Ravenous</item>
</string-array>
</resources>