<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="5dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:alpha="0.4"
            android:layout_gravity="bottom"
            android:src="@drawable/pizza" />



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_Prompt"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        android:shadowDy="10"/>

    <EditText
        android:id="@+id/editUserPromp"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:ems="10"
        android:hint="@string/user_Prompt2"
        android:textColorHint="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
      android:textColor="@color/black"
        android:inputType="number"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="23dp"
        />

    <Spinner
        android:id="@+id/hungerLevel"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:textSize="28sp"
        android:entries="@array/hungerLevel" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/calculate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/detailsResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/PizzaNeeded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/hungertype"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDy="7"
                android:outlineSpotShadowColor="@color/black"/>
            <TextView
                android:id="@+id/PizzaNeededResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/AmountOfPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/Amount_of_pizza"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/AmountOfPizzaResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
    </FrameLayout>
</LinearLayout>